# cgl_rs

./: .gitignore  Cargo.toml  LICENSE  README.md  benchmark.sh  benchmark.sh.save
sage/: cgl.sage  modpoly.sage
src/: main.rs
